Add support for the new scope in quality gates