@@ -8,6 +8,7 @@ import edu.hm.hafner.grading.QualityGateResult.OverallStatus;
 import edu.hm.hafner.util.FilteredLog;
 
 import java.util.List;
+import java.util.NoSuchElementException;
 import nl.jqno.equalsverifier.EqualsVerifier;
 
 import static edu.hm.hafner.grading.assertions.Assertions.*;
@@ -18,14 +19,21 @@ import static org.mockito.Mockito.*;
  */
 @DefaultLocale("en")
 class QualityGateEvaluationTest {
+    private static final String LINE_COVERAGE_NAME = "Line Coverage";
+    private static final String LINE_METRIC = "line";
+    private static final Scope SCOPE = Scope.PROJECT;
+    private static final String BRANCH_COVERAGE_NAME = "Branch Coverage";
+    private static final String BRANCH_METRIC = "branch";
+
     @Test
     void shouldPassWhenCoverageAboveThreshold() {
         var log = new FilteredLog("Test");
 
-        var qualityGate = new QualityGate("Line Coverage", "line", 80.0, Criticality.FAILURE);
+        var qualityGate = new QualityGate(LINE_COVERAGE_NAME, LINE_METRIC, SCOPE,
+                80.0, Criticality.FAILURE);
 
         var statistics = mock(MetricStatistics.class);
-        when(statistics.asDouble("line")).thenReturn(85.0);
+        when(statistics.asDouble(LINE_METRIC, SCOPE)).thenReturn(85.0);
 
         var result = QualityGateResult.evaluate(statistics, List.of(qualityGate), log);
 
@@ -33,7 +41,7 @@ class QualityGateEvaluationTest {
                 .hasSuccessCount(1).hasFailureCount(0)
                 .hasOverallStatus(OverallStatus.SUCCESS);
 
-        var evaluation = result.getEvaluations().get(0);
+        var evaluation = result.getEvaluations().getFirst();
         assertThat(evaluation).isPassed()
                 .hasActualValue(85.0)
                 .hasCriticality(Criticality.FAILURE)
@@ -54,10 +62,11 @@ class QualityGateEvaluationTest {
     void shouldFailWhenCoverageBelowThreshold() {
         var log = new FilteredLog("Test");
 
-        var qualityGate = new QualityGate("Line Coverage", "line", 80.0, Criticality.FAILURE);
+        var qualityGate = new QualityGate(LINE_COVERAGE_NAME, LINE_METRIC, SCOPE,
+                80.0, Criticality.FAILURE);
 
         var statistics = mock(MetricStatistics.class);
-        when(statistics.asDouble("line")).thenReturn(75.0);
+        when(statistics.asDouble(LINE_METRIC, SCOPE)).thenReturn(75.0);
 
         var result = QualityGateResult.evaluate(statistics, List.of(qualityGate), log);
 
@@ -84,11 +93,26 @@ class QualityGateEvaluationTest {
     }
 
     @Test
+    void shouldThrowExceptionWhenValueIsMissing() {
+        var log = new FilteredLog("Test");
+
+        var qualityGate = new QualityGate(LINE_COVERAGE_NAME, LINE_METRIC, SCOPE,
+                80.0, Criticality.FAILURE);
+
+        var statistics = mock(MetricStatistics.class);
+        when(statistics.asDouble(LINE_METRIC, SCOPE))
+                .thenThrow(new NoSuchElementException("Nothing there"));
+
+        assertThatExceptionOfType(NoSuchElementException.class).isThrownBy(
+                () -> QualityGateResult.evaluate(statistics, List.of(qualityGate), log));
+    }
+
+    @Test
     void shouldReturnCorrectCountsForEmptyGates() {
         var log = new FilteredLog("Test");
 
         var statistics = mock(MetricStatistics.class);
-        when(statistics.asDouble("line")).thenReturn(85.0);
+        when(statistics.asDouble(LINE_METRIC, SCOPE)).thenReturn(85.0);
 
         var result = QualityGateResult.evaluate(statistics, List.of(), log);
 
@@ -106,13 +130,15 @@ class QualityGateEvaluationTest {
         var log = new FilteredLog("Test");
 
         var qualityGates = List.of(
-                new QualityGate("Line Coverage", "line", 80.0, Criticality.FAILURE),
-                new QualityGate("Branch Coverage", "branch", 60.0, Criticality.UNSTABLE)
+                new QualityGate(LINE_COVERAGE_NAME, LINE_METRIC, SCOPE,
+                        80.0, Criticality.FAILURE),
+                new QualityGate(BRANCH_COVERAGE_NAME, BRANCH_METRIC, SCOPE,
+                        60.0, Criticality.UNSTABLE)
         );
 
         var statistics = mock(MetricStatistics.class);
-        when(statistics.asDouble("line")).thenReturn(85.0);
-        when(statistics.asDouble("branch")).thenReturn(70.0);
+        when(statistics.asDouble(LINE_METRIC, SCOPE)).thenReturn(85.0);
+        when(statistics.asDouble(BRANCH_METRIC, SCOPE)).thenReturn(70.0);
 
         var result = QualityGateResult.evaluate(statistics, qualityGates, log);
 
@@ -127,6 +153,40 @@ class QualityGateEvaluationTest {
                         "Passed: 2, Failed: 0",
                         "✅ Line Coverage: 85.00 >= 80.00",
                         "✅ Branch Coverage: 70.00 >= 60.00");
+    }
+
+    @Test
+    void shouldHandleMultipleScopes() {
+        var log = new FilteredLog("Test");
+
+        var qualityGates = List.of(
+                new QualityGate("Line Coverage - Whole Project", LINE_METRIC, Scope.PROJECT,
+                        80.0, Criticality.UNSTABLE),
+                new QualityGate("Line Coverage - Modified Files", LINE_METRIC, Scope.MODIFIED_FILES,
+                        70.0, Criticality.UNSTABLE),
+                new QualityGate("Line Coverage - Changed Code", LINE_METRIC, Scope.MODIFIED_LINES,
+                        60.0, Criticality.UNSTABLE)
+        );
+
+        var statistics = mock(MetricStatistics.class);
+        when(statistics.asDouble(LINE_METRIC, Scope.PROJECT)).thenReturn(85.0);
+        when(statistics.asDouble(LINE_METRIC, Scope.MODIFIED_FILES)).thenReturn(75.0);
+        when(statistics.asDouble(LINE_METRIC, Scope.MODIFIED_LINES)).thenReturn(65.0);
+
+        var result = QualityGateResult.evaluate(statistics, qualityGates, log);
+
+        assertThat(result).isSuccessful()
+                .hasSuccessCount(3)
+                .hasFailureCount(0)
+                .hasOverallStatus(OverallStatus.SUCCESS);
+
+        assertThat(log.getInfoMessages()).map(String::strip)
+                .containsSubsequence("Evaluating 3 quality gate(s)",
+                        "Quality gates evaluation completed: ✅ SUCCESS",
+                        "Passed: 3, Failed: 0",
+                        "✅ Line Coverage - Whole Project: 85.00 >= 80.00",
+                        "✅ Line Coverage - Modified Files: 75.00 >= 70.00",
+                        "✅ Line Coverage - Changed Code: 65.00 >= 60.00");
     }
 
     @Test
